Review Request 12811 see PLS-6326, PLS-6364, PLS-6382 - fix for entity type in csv import - fix segments list textareas overflowing when expanded - brought file import lattice fields in to sync with spreadsheet values

--- a/le-ui/projects/leadprioritization/app/segments/views/SegmentationListView.scss
+++ b/le-ui/projects/leadprioritization/app/segments/views/SegmentationListView.scss
@@ -2,4 +2,7 @@
   .tile-header h2 {
     background-image: url('/assets/images/ico-segments.png');
   }
+  form textarea {
+    max-width: 100%;
+  }
 }
